# pingora

./: .gitignore  Cargo.toml
docs/zh_cn/: quick_start_zh.md
docs/zh_cn/user_guide/: errors_zh.md  failover_zh.md  modify_filter_zh.md  peer_zh.md  prom_zh.md
pingora-gateway/: Cargo.toml
pingora-gateway/src/: lib.rs  main.rs
pingora-gateway/src/gateway/: ctx.rs  http_proxy.rs  mod.rs  module.rs
pingora-gateway/src/modules/: demo.rs
pingora-load-balancing/: Cargo.toml
pingora-load-balancing/src/: lib.rs
pingora-load-balancing/src/discovery/: dns.rs  mod.rs
pingora-load-balancing/src/selection/: algorithms.rs  mod.rs  weighted.rs
