[package]
name = "pingora-gateway"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait="0.1"
lazy_static = "1.4.0"
pingora-core = { version = "0.1.0", path = "../pingora-core" }
pingora-http = { version = "0.1.0", path = "../pingora-http" }
pingora-timeout = { version = "0.1.0", path = "../pingora-timeout" }
pingora-load-balancing = { version = "0.1.0", path = "../pingora-load-balancing" }
pingora-proxy = { version = "0.1.0", path = "../pingora-proxy" }
pingora-cache = { version = "0.1.0", path = "../pingora-cache" }


[dev-dependencies]
structopt = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
matches = "0.1"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["rustls"], default-features = false }
hyperlocal = "0.8"
hyper = "0.14"
jemallocator = "0.5"
async-trait = { workspace = true }
http = { workspace = true }
log = { workspace = true }
prometheus = "0.13"
once_cell = { workspace = true }
bytes = { workspace = true }
regex = "1"


#
#[features]
#default = ["openssl"]
#openssl = [
#    "pingora-core/openssl",
#    "pingora-proxy?/openssl",
#    "pingora-cache?/openssl",
#    "pingora-load-balancing?/openssl",
#]
#boringssl = [
#    "pingora-core/boringssl",
#    "pingora-proxy?/boringssl",
#    "pingora-cache?/boringssl",
#    "pingora-load-balancing?/boringssl",
#]
#proxy = ["pingora-proxy"]
#lb = ["pingora-load-balancing", "proxy"]
#cache = ["pingora-cache"]
